Fix up formating on item pages that was causing divs to wrap to the next line, making everything look quite broken

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -105,7 +105,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(enabled = false);position:rela
 .view-3d{float:right}
 #item-record dl{margin-bottom:20px;overflow:hidden;line-height:1.5}
 #item-record dl dt{float:left;width:170px;text-align:right;font-size:12px;color:#636363}
-#item-record dl dd{float:left;margin-left:20px;width:320px;font-size:14px}
+#item-record dl dd{float:left;margin-left:20px;width:300px;font-size:14px}
 #item-record dd.dimensions b {color: #636363;}
 
 /* Secondary Item Details */
